# iProperties

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: LICENSE  README.md  block.iProperties.properties
example/linux_scripts_sh/: process_all.sh  process_block.sh  process_entity.sh  process_item.sh
example/windows_scripts_bat/: process_all.bat  process_block.bat  process_entity.bat  process_item.bat
src/: main.py
src/iProperties/: main.py
src/iProperties/compiler/: __init__.py  compiler.py
src/iProperties/formatting/: __init__.py  args.py  formatting.py
src/iProperties/preprocessor/: __init__.py  preprocessor.py
