[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "iProperties"
authors = [
    {name = "Mikołaj Pokora", email = "pokora.mikolaj+github@gmail.com"}
]
description = "Iris `.properties` compiler for extended functionality and automation"
#readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.12"
keywords = ["iris", "optifine", "mc", "minecraft", "shader", "shaders", "properties", "compiler"]
classifiers = [
    "Intended Audience :: Developers",
]

[tool.hatch.version]
path = "src/iProperties/main.py"

[project.urls]
Repository = "https://github.com/MikiP98/iProperties"
Issues = "https://github.com/MikiP98/iProperties/issues"

[project.scripts]
iProperties = "iProperties.main:main_cli"
iris = "iProperties.main:main_cli"